[Home]

Summary:ASTERISK-24907: res_pjsip_outbound_registration: crash during unload if registration attempts are still occuring
Reporter:Kevin Harwell (kharwell)Labels:
Date Opened:2015-03-24 16:23:22Date Closed:2015-06-26 21:01:01
Priority:MinorRegression?No
Status:Closed/CompleteComponents:Resources/res_pjsip_outbound_registration
Versions:13.2.0 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Attachments:
Description:If the res_pjsip_outbound_registration module is unloaded while registration attempts are occurring then after a timeout pjsip attempts to call back into the module that no longer exists, thus causing a crash.

steps to duplicate:

1. Configure res_pjsip for outbound registration(s) to a non existent remote server.
2. Unload the res_pjsip_outbound_registration module
3. Wait for timeout.
Comments:By: Kevin Harwell (kharwell) 2015-03-24 16:24:02.623-0500

A similar situation occurred in res_pjsip_outbound_publish. It might be helpful to look at how that solves this issue.